src/test/resources/tests/typeError/structSet.qg

init {
    true.fieldName = 2
}

run true

input(a,b) true
